language/move-lang/tests/move_check/parser/invalid_character_non_ascii.move
address 0x0:

// Check that we provide good error messages for non-ASCII characters.
module Temp {
   ф
}
